--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.1",
     "drizzle-orm": "^0.44.5",
+    "jose": "^6.1.0",
     "jotai": "^2.13.1",
     "next": "15.5.0",
     "pg": "^8.16.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "recharts": "^3.1.2"
+    "recharts": "^3.1.2",
+    "redis": "^5.8.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
