--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "drizzle-orm": "^0.44.5",
     "jose": "^6.1.0",
     "jotai": "^2.13.1",
+    "lucide-react": "^0.544.0",
     "next": "15.5.0",
     "pg": "^8.16.3",
     "react": "19.1.0",
