--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "db:push": "drizzle-kit push",
+    "db:generate": "drizzle-kit generate",
+    "db:seed": "tsx src/lib/config/db/init_db.ts",
+    "db:check": "tsx scripts/check-db.ts"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.7",
